--- a/building/rental/templates/rentals/layout.html
+++ b/building/rental/templates/rentals/layout.html
@@ -34,7 +34,16 @@
                         <a class="nav-link" href="{% url 'index' %}">All buildings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">Add Tenant</a>
+                        <a class="nav-link" href="{% url 'addTenant' %}">Add Tenant</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'tenants' %}">All Tenants</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'addbtenants' %}">Add Building Tenant</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'btenants' %}">All Building Tenants</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
